--- a/package.json
+++ b/package.json
@@ -13,14 +13,21 @@
     "d3": "^7.9.0",
     "glob": "^11.0.2",
     "gray-matter": "^4.0.3",
+    "hast": "^1.0.0",
     "next": "15.3.1",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-ionicons": "^4.2.1",
     "reactflow": "^11.11.4",
+    "rehype-pretty-code": "^0.14.1",
+    "rehype-raw": "^7.0.0",
+    "rehype-stringify": "^10.0.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
-    "remark-wiki-link": "^2.0.1"
+    "remark-rehype": "^11.1.2",
+    "remark-wiki-link": "^2.0.1",
+    "shiki": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
